# WohnlagenBRB

./: .gitignore  AGENTS.md  LICENSE.md  README.md  add-geometry-to-lat-lon.py  add_haltestellen_linien_count.py  build_2026_haltestellen.py  crs-conversion.py  datenfelder.md  einzelhandel-adressen.py  geocoder.py  helper.py  html-to-png.py  laerm.ipynb  medizinische-zentren.py  public-transport.ipynb  pyproject.toml  requirements.txt  routing.py  routing2.py  routing_zentrum.py  wohnlagen.ipynb  wohnlagen_2026.ipynb  wohnlagen_kmeans_pca.ipynb  wohnlagen_validierung.ipynb
maps/: html_to_png.py
util/: add-geometry-to-lat-lon.py  add_haltestellen_linien_count.py  einzelhandel-adressen.py  medizinische-zentren.py  public-transport.ipynb
