[project]
name = "wohnlagenbrb"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "gpd>=1.1.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.5",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "pd>=0.0.4",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "scipy-stubs==1.16.1.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
]
