[project]
name = "wohnlagenbrb"
version = "0.1.0"
description = "Modell zur Wohnlagenberechnung für Brandenburg an der Havel"
requires-python = ">=3.13"
dependencies = [
    "branca==0.8.2",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "gpd>=1.1.1",
    "ipython==9.7.0",
    "ipywidgets==8.1.8",
    "jupyterlab==4.5.0",
    "libpysal>=4.13.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.1",
    "osmnx>=2.0.7",
    "pandas==2.3.3",
    "pandas-stubs==2.3.2.250926",
    "pd>=0.0.4",
    "plotly==6.5.0",
    "px>=0.2.2",
    "requests==2.32.5",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "scipy-stubs==1.16.3.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
    "spopt>=0.7.0",
]
